<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ifTextView1"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="33dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="8dp"
                android:text="@string/ifTextView1" />

            <TextView
                android:id="@+id/ifTextView2"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ifTextView1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="33dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="19dp"
                android:text="@string/ifTextView2" />

            <TextView
                android:id="@+id/ifTextView3"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="41dp"
                android:layout_marginLeft="41dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:layout_toEndOf="@+id/ifTextView1"
                android:layout_toRightOf="@+id/ifTextView1"
                android:text="@string/ifTextView3" />

            <TextView
                android:id="@+id/ifTextView4"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ifTextView3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="82dp"
                android:layout_marginLeft="82dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_toEndOf="@+id/ifTextView2"
                android:layout_toRightOf="@+id/ifTextView2"
                android:text="@string/ifTextView4" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>